<resources>
    <string name="app_name">ProjectFinish</string>
    <string name="to_do">To Do</string>
    <string name="home">Home</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="info">Info</string>
    <string name="profil">Profil</string>
    <string name="content_info">Delivery Air Mineral dan LPG merupakan aplikasi pemesanan air mineral dalam berbagai bentuk kemasan dan lpg. Pengiriman akan dilakukan setelah pemesanan dilakukan. Pesanan akan dikirimkan dalam waktu 20 menit setelah pesanan telah dikonfirmasi</string>
    <string name="no_hp">085648156995</string>
    <string name="no_wa">089602370416</string>


    <string name="aqua_kemasan">AQUA 240ml Box (Isi: 48 Gelas) Harga Rp 30.000 per Box</string>
    <string name="harga_aqua_600ml">AQUA 600ml Box (Isi: 24 Botol) Harga Rp 45.000 per Box</string>
    <string name="harga_cleo_galon">CLEO Galon Harga Rp 15.000 per Galon</string>
    <string name="harga_cleo_240ml">CLEO 240ml Box (Isi: 48 Gelas) Harga 20.000 per Box</string>
    <string name="harga_cleo_550ml">CLEO 550ml Box (Isi:24 Botol) Harga Rp 30.000 per Box</string>
    <string name="harga_club_galon">Club Galon Harga Rp 10.000 per Galon</string>
    <string name="harga_club_240ml">Club 240ml Box (Isi: 48 Gelas) Harga Rp 15.000 per Box</string>
    <string name="harga_club_600ml">Club 600ml Box (Isi: 24ml Botol) Harga 15.000 per Box</string>
    <string name="harga_tabung">Tabung LPG 3kg Harga Rp 17.000 per Tabung</string>
    <string name="harga_galon">AQUA Galon Harga Rp 18.000 per Galon</string>
    <string name="nama">Nama</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_pengguna">Alamat Pengguna</string>
    <string name="noHp">No Hp</string>
    <string name="email">Email</string>
    <string name="email_pengguna">Email Pengguna</string>
    <string name="edit">Edit</string>
    <string name="no_hp_pengguna">No Hp Pengguna</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="register">Register</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="tanggal">Tanggal</string>
</resources>
