<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.projectfinish.LoginActivity"
    android:background="@drawable/login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        
        <ImageView
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo" />
        
        <EditText
            android:id="@+id/editusername"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:background="@drawable/edittextstyle"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/editpassword"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:background="@drawable/edittextstyle"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/password"/>
        
        <Button
            android:id="@+id/login"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/buttonstyleselector"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:layout_height="60dp"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/belum_memiliki_akun"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:padding="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/register"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/buttonstyleselector"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:text="@string/register"
            android:layout_height="60dp"
            />
        
    </LinearLayout>

</LinearLayout>
