<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.projectfinish.ToolBarActivity">

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relLayoutTopBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentTop="true">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toolbarTop">

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLayoutMiddle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relLayoutTopBar"
            android:layout_above="@+id/relLayoutBottomBar">

            <ImageView
                android:id="@+id/img11"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_profil"
                android:contentDescription="@string/to_do"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img11"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@+id/img11"
                android:layout_toStartOf="@+id/img11"
                android:text="@string/nama"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignLeft="@+id/img11"
                android:layout_alignStart="@+id/img11"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:text="@string/nama_pengguna"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignStart="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="23dp"
                android:text="@string/alamat"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignLeft="@+id/nama"
                android:layout_alignStart="@+id/nama"
                android:text="@string/alamat_pengguna"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="23dp"
                android:text="@string/noHp"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/no_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/alamat"
                android:layout_alignStart="@+id/alamat"
                android:text="@string/no_hp_pengguna"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/no_hp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:background="#1F3A93"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_edit"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/darker_gray"
                android:text="Logout"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLayoutBottomBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomnavMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/baseline_bottom"
                app:menu="@menu/bottom_navigation_menu">

            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
