<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.projectfinish.edit_profil">

    <ImageView
        android:id="@+id/img11"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_alignLeft="@+id/btn_simpan"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_simpan"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/to_do"
        android:src="@drawable/ic_profil" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img11"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/img11"
        android:layout_toStartOf="@+id/img11"
        android:text="@string/nama"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/img11"
        android:layout_alignStart="@+id/img11"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:textSize="20sp"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:text="@string/alamat"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/nama"
        android:layout_alignStart="@+id/nama"
        android:text=""
        android:textSize="20sp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="23dp"
        android:text="@string/noHp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/no_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/alamat"
        android:layout_alignStart="@+id/alamat"
        android:text=""
        android:textSize="20sp"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_hp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#1F3A93"
        android:text="Simpan"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</RelativeLayout>
