<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.projectfinish.ToolBarActivity">

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relLayoutTopBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentTop="true">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toolbarTop">

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lineLayoutMiddle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relLayoutTopBar"
            android:layout_above="@+id/relLayoutBottomBar"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/to_do"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/content_info"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/lineLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/contact_us"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:contentDescription="@string/to_do"/>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_hp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lineLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/wa"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:contentDescription="@string/to_do"/>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_wa"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relLayoutBottomBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomnavMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/baseline_bottom"
                app:menu="@menu/bottom_navigation_menu">

            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
